# Insurance-Agentic-AI

./: .gitignore  README.md  docker-compose.yml  login_implemntation.md  pyproject.toml
Backend/alembic/: env.py
Backend/alembic/versions/: 088b15f805a3_add_google_id_and_nullable_password.py  65c5ad8fdd76_create_users_and_sessions.py  6c7392348541_add_role_to_users.py  abb0bdf399de_create_knowledge_documents_table.py  add633788c1a_create_access_requests_table.py
Backend/src/api/: main.py
Backend/src/api/endpoints/: auth.py  document.py
Backend/src/core/: config.py  security.py
Backend/src/db/: session.py
Backend/src/models/: chunk.py  document.py  user.py
Backend/src/schemas/: document.py  user.py
Backend/uploads/: 8feb4291-53ed-4fc7-8e49-af78c938cf82_Trinity Underwriters.docx  f4194b55-8b70-4554-a6be-b0b66efb546c_Trinity Underwriters. updated guidelines2024.docx
Frontend/: package-lock.json  package.json
Frontend/src/app/: globals.css  layout.tsx  page.tsx
Frontend/src/app/auth/callback/: page.tsx
