[project]
name = "insurance-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "celery>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain>=1.3.10",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
